retrieveUnpackaged/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>AHRC_Code__c</fullName>
        <formula>IF(LEFT(TEXT(AHRC__c),FIND(&quot; &quot;,TEXT(AHRC__c))-1)=&quot;&quot;,TEXT(AHRC__c),LEFT(TEXT(AHRC__c),FIND(&quot; &quot;,TEXT(AHRC__c))-1))</formula>
        <label>AHRC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHRC__c</fullName>
        <inlineHelpText>Allowance Holder Responsibility Center</inlineHelpText>
        <label>AHRC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>561</fullName>
                </value>
                <value>
                    <fullName>56A - IO-DC</fullName>
                </value>
                <value>
                    <fullName>56C - CD</fullName>
                </value>
                <value>
                    <fullName>56D - TATD</fullName>
                </value>
                <value>
                    <fullName>56E - IO-AA</fullName>
                </value>
                <value>
                    <fullName>56F - TCD</fullName>
                </value>
                <value>
                    <fullName>56H - ASD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Project_Officer_Email__c</fullName>
        <formula>Alternate_Project_Officer__r.Email</formula>
        <label>Alternate Project Officer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Project_Officer_Name__c</fullName>
        <formula>Alternate_Project_Officer__r.LastName &amp; &quot;,&quot; &amp; Alternate_Project_Officer__r.FirstName</formula>
        <label>Alternate Project Officer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Project_Officer_Phone__c</fullName>
        <formula>Alternate_Project_Officer__r.Phone</formula>
        <label>Alternate Project Officer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Project_Officer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alternate Project Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Alternate Project Officer)</relationshipLabel>
        <relationshipName>Documents3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Work_Assignment_Manager_Email__c</fullName>
        <formula>Alternate_Work_Assignment_Manager__r.Email</formula>
        <label>Alternate Work Assignment Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Work_Assignment_Manager_Name__c</fullName>
        <formula>Alternate_Work_Assignment_Manager__r.LastName &amp; &quot;,&quot; &amp; Alternate_Work_Assignment_Manager__r.FirstName</formula>
        <label>Alternate Work Assignment Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Work_Assignment_Manager_Phone__c</fullName>
        <formula>Alternate_Work_Assignment_Manager__r.Phone</formula>
        <label>Alternate Work Assignment Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Work_Assignment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Work Assignment Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Alternate Work Assignment Manager)</relationshipLabel>
        <relationshipName>Documents4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appropriation__c</fullName>
        <label>Appropriation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>CR1</fullName>
                </value>
                <value>
                    <fullName>CRX</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E4D</fullName>
                </value>
                <value>
                    <fullName>E4C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BBFY_EBFY__c</fullName>
        <inlineHelpText>Beginning Budget Fiscal Year / Ending Budget Fiscal Year</inlineHelpText>
        <label>BBFY/EBFY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012/2013</fullName>
                </value>
                <value>
                    <fullName>2013/2014</fullName>
                </value>
                <value>
                    <fullName>2014/2015</fullName>
                </value>
                <value>
                    <fullName>2015/2016</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2016/2017</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2017/2018</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOC_1__c</fullName>
        <formula>CASE((LEFT(RIGHT(TEXT(FOC_1a__c), 3),2)), &quot;10&quot;, &quot;10 - Personnel Comp &amp; Benefits&quot;, &quot;21&quot;, &quot;21 - Travel Subject To Ceiling&quot;, 

&quot;28&quot;, &quot;28 - Site Specific Travel&quot;, 
&quot;36&quot;, &quot;36 - Expenses&quot;, 
&quot;37&quot;, &quot;37 - Contracts&quot;, 
&quot;38&quot;, &quot;38 - Working Capital Fund&quot;, 
&quot;41&quot;, &quot;41 - Grants/Loans&quot;, 


&quot;&quot; )</formula>
        <label>BOC 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOC_1b__c</fullName>
        <label>BOC 1b</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOC_2__c</fullName>
        <formula>CASE((LEFT(RIGHT(TEXT(FOC_2a__c), 3),2)), &quot;10&quot;, &quot;10 - Personnel Comp &amp; Benefits&quot;, &quot;21&quot;, &quot;21 - Travel Subject To Ceiling&quot;, 

&quot;28&quot;, &quot;28 - Site Specific Travel&quot;, 
&quot;36&quot;, &quot;36 - Expenses&quot;, 
&quot;37&quot;, &quot;37 - Contracts&quot;, 
&quot;38&quot;, &quot;38 - Working Capital Fund&quot;, 
&quot;41&quot;, &quot;41 - Grants/Loans&quot;, 


&quot;&quot; )</formula>
        <label>BOC 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOC_3__c</fullName>
        <formula>CASE((LEFT(RIGHT(TEXT(FOC_3a__c), 3),2)), &quot;10&quot;, &quot;10 - Personnel Comp &amp; Benefits&quot;, &quot;21&quot;, &quot;21 - Travel Subject To Ceiling&quot;, 

&quot;28&quot;, &quot;28 - Site Specific Travel&quot;, 
&quot;36&quot;, &quot;36 - Expenses&quot;, 
&quot;37&quot;, &quot;37 - Contracts&quot;, 
&quot;38&quot;, &quot;38 - Working Capital Fund&quot;, 
&quot;41&quot;, &quot;41 - Grants/Loans&quot;, 


&quot;&quot; )</formula>
        <label>BOC 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOC_Category__c</fullName>
        <label>BOC Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>21, 28</fullName>
                </value>
                <value>
                    <fullName>36, 37, 38, 41</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bankcard_Holder_Email__c</fullName>
        <formula>Bankcard_Holder__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bankcard Holder Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankcard_Holder_Name__c</fullName>
        <formula>Bankcard_Holder__r.LastName &amp; &quot;,&quot; &amp; Bankcard_Holder__r.FirstName</formula>
        <label>Bankcard Holder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankcard_Holder_Phone__c</fullName>
        <formula>Bankcard_Holder__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bankcard Holder Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankcard_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bankcard Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Bankcard Holder)</relationshipLabel>
        <relationshipName>Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bankcard_Purchase__c</fullName>
        <formula>IF( RecordType.Name = &quot;Document - Bankcard Purchase&quot;, &quot;Yes&quot;, &quot;&quot;)</formula>
        <label>Bankcard Purchase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments / Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>Please exclude special characters from Contract Number</description>
        <inlineHelpText>Please exclude special characters from Contract Number</inlineHelpText>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Creator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <label>Creator Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCN__c</fullName>
        <label>DCN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Preparer_Email__c</fullName>
        <formula>Document_Preparer__r.Email</formula>
        <label>Document Preparer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Preparer_Name__c</fullName>
        <formula>Document_Preparer__r.LastName &amp; &quot;,&quot; &amp; Document_Preparer__r.FirstName</formula>
        <label>Document Preparer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Preparer_Phone__c</fullName>
        <formula>Document_Preparer__r.Phone</formula>
        <label>Document Preparer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Preparer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Preparer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Document Preparer)</relationshipLabel>
        <relationshipName>Documents6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type_Number__c</fullName>
        <label>Document Type Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>MOD</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>SWA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar_Amount_1__c</fullName>
        <label>Dollar Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount_2__c</fullName>
        <label>Dollar Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount_3__c</fullName>
        <label>Dollar Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <label>Sub-Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EAS_PR_Number__c</fullName>
        <inlineHelpText>EPA Acquisition System Procurement Request</inlineHelpText>
        <label>EAS PR Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cellular Phone</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Contract - Administrative</fullName>
                </value>
                <value>
                    <fullName>Contract - Programmatic</fullName>
                </value>
                <value>
                    <fullName>Delivery Service</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>IAG</fullName>
                </value>
                <value>
                    <fullName>Lab Equipment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Toner Printer/Copier</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel - International</fullName>
                </value>
                <value>
                    <fullName>Travel - Local</fullName>
                </value>
                <value>
                    <fullName>Travel - TA</fullName>
                </value>
                <value>
                    <fullName>Working Capital Fund</fullName>
                </value>
                <value>
                    <fullName>SF182</fullName>
                </value>
                <value>
                    <fullName>Typesetting Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOC_1__c</fullName>
        <formula>RIGHT( TEXT(FOC_1a__c), LEN( TEXT(FOC_1a__c))-4)</formula>
        <label>FOC 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_1a__c</fullName>
        <label>FOC 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2100 - Travel (21)</fullName>
                </value>
                <value>
                    <fullName>2111 - Per Diem &amp; Subsistence (21)</fullName>
                </value>
                <value>
                    <fullName>2113 - Common Carrier (21)</fullName>
                </value>
                <value>
                    <fullName>2114 - Privately Owned Vehicle (21)</fullName>
                </value>
                <value>
                    <fullName>2115 - Commercial Rental (21)</fullName>
                </value>
                <value>
                    <fullName>2116 - Gsa Car Rental (21)</fullName>
                </value>
                <value>
                    <fullName>2117 - Incidental Costs (21)</fullName>
                </value>
                <value>
                    <fullName>2118 - E Travel Transaction Fee (21)</fullName>
                </value>
                <value>
                    <fullName>2121 - Site Per Diem &amp; Subs (28)</fullName>
                </value>
                <value>
                    <fullName>2123 - Site Common Carrier (28)</fullName>
                </value>
                <value>
                    <fullName>2124 - Site Pov (28)</fullName>
                </value>
                <value>
                    <fullName>2125 - Site Commercial Rental (28)</fullName>
                </value>
                <value>
                    <fullName>2126 - Site Gsa Car Rental (28)</fullName>
                </value>
                <value>
                    <fullName>2127 - Site Incidentials (28)</fullName>
                </value>
                <value>
                    <fullName>2128 - Etravel Transact Fee-Sitetrav (28)</fullName>
                </value>
                <value>
                    <fullName>2135 - Meetings / Conf Subsistence (21)</fullName>
                </value>
                <value>
                    <fullName>2191 - Local Travel (21)</fullName>
                </value>
                <value>
                    <fullName>2192 - Site-Specific Local Travel (28)</fullName>
                </value>
                <value>
                    <fullName>2198 - Vehicle Chargeback (21)</fullName>
                </value>
                <value>
                    <fullName>2199 - Interest Penalty (21)</fullName>
                </value>
                <value>
                    <fullName>21 - Travel Subject To Ceiling (21)</fullName>
                </value>
                <value>
                    <fullName>2200 - Transportation Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2220 - Admin Transport Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2221 - Transprt Of Things-Consult Fee (36)</fullName>
                </value>
                <value>
                    <fullName>2222 - Transport Things-Variable Fee (36)</fullName>
                </value>
                <value>
                    <fullName>2223 - Pcs Transfer Effects (36)</fullName>
                </value>
                <value>
                    <fullName>2224 - Prog. Transport Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2297 - Prog.Interest Penalty-Trans (36)</fullName>
                </value>
                <value>
                    <fullName>2299 - Admin.Interest Penalty-Trans (36)</fullName>
                </value>
                <value>
                    <fullName>2300 - Rentals, Communication, Util (36)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOC_1b__c</fullName>
        <label>FOC 1b</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BOC_1b__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10 - Personnel Comp &amp; Benefits</fullName>
                </value>
                <value>
                    <fullName>1100 - Personnel Comp</fullName>
                </value>
                <value>
                    <fullName>1101 - Jury Duty</fullName>
                </value>
                <value>
                    <fullName>1112 - Perm Full Time,Oth Thn Wage Bd</fullName>
                </value>
                <value>
                    <fullName>1113 - Perm Full Time,Civ,Wage Bd</fullName>
                </value>
                <value>
                    <fullName>1119 - Lump Sum Terminal Leave-Civ</fullName>
                </value>
                <value>
                    <fullName>1131 - Experts &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>1134 - Temporary Civilian</fullName>
                </value>
                <value>
                    <fullName>1139 - Pers Ser, Civ, All Other Opft</fullName>
                </value>
                <value>
                    <fullName>1150 - Comp Time Payments</fullName>
                </value>
                <value>
                    <fullName>1151 - Overtime Pay, Pft</fullName>
                </value>
                <value>
                    <fullName>1152 - Night Differential</fullName>
                </value>
                <value>
                    <fullName>1153 - Overtime Pay,Opft</fullName>
                </value>
                <value>
                    <fullName>1154 - Foreign Post Differential Civ</fullName>
                </value>
                <value>
                    <fullName>1155 - Hazardous Duty, Civ</fullName>
                </value>
                <value>
                    <fullName>1156 - Sunday Pay</fullName>
                </value>
                <value>
                    <fullName>1157 - Holiday Pay</fullName>
                </value>
                <value>
                    <fullName>1158 - Overtime Pay, Non-Ceiling</fullName>
                </value>
                <value>
                    <fullName>1159 - Other Premium Pay-Civilians</fullName>
                </value>
                <value>
                    <fullName>1161 - Cash Award Program</fullName>
                </value>
                <value>
                    <fullName>1162 - Performance Awards-Ses</fullName>
                </value>
                <value>
                    <fullName>1163 - Presidential Rank Awards</fullName>
                </value>
                <value>
                    <fullName>1165 - Other Personnel Comp</fullName>
                </value>
                <value>
                    <fullName>1166 - Royalty Payments</fullName>
                </value>
                <value>
                    <fullName>1167 - Special Act Award Ses</fullName>
                </value>
                <value>
                    <fullName>1170 - Basepay Comm Non Ceiling</fullName>
                </value>
                <value>
                    <fullName>1171 - Basepay Comm Off-Pft</fullName>
                </value>
                <value>
                    <fullName>1172 - Qtrs And Subsistence-Comm Off</fullName>
                </value>
                <value>
                    <fullName>1173 - Other Pay- Comm Officers</fullName>
                </value>
                <value>
                    <fullName>1174 - Lump Sum Terminal Pay-Comm Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOC_2__c</fullName>
        <formula>RIGHT( TEXT(FOC_2a__c), LEN( TEXT(FOC_2a__c))-4)</formula>
        <label>FOC 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_2a__c</fullName>
        <label>FOC 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2100 - Travel (21)</fullName>
                </value>
                <value>
                    <fullName>2111 - Per Diem &amp; Subsistence (21)</fullName>
                </value>
                <value>
                    <fullName>2113 - Common Carrier (21)</fullName>
                </value>
                <value>
                    <fullName>2114 - Privately Owned Vehicle (21)</fullName>
                </value>
                <value>
                    <fullName>2115 - Commercial Rental (21)</fullName>
                </value>
                <value>
                    <fullName>2116 - Gsa Car Rental (21)</fullName>
                </value>
                <value>
                    <fullName>2117 - Incidental Costs (21)</fullName>
                </value>
                <value>
                    <fullName>2118 - E Travel Transaction Fee (21)</fullName>
                </value>
                <value>
                    <fullName>2121 - Site Per Diem &amp; Subs (28)</fullName>
                </value>
                <value>
                    <fullName>2123 - Site Common Carrier (28)</fullName>
                </value>
                <value>
                    <fullName>2124 - Site Pov (28)</fullName>
                </value>
                <value>
                    <fullName>2125 - Site Commercial Rental (28)</fullName>
                </value>
                <value>
                    <fullName>2126 - Site Gsa Car Rental (28)</fullName>
                </value>
                <value>
                    <fullName>2127 - Site Incidentials (28)</fullName>
                </value>
                <value>
                    <fullName>2128 - Etravel Transact Fee-Sitetrav (28)</fullName>
                </value>
                <value>
                    <fullName>2135 - Meetings / Conf Subsistence (21)</fullName>
                </value>
                <value>
                    <fullName>2191 - Local Travel (21)</fullName>
                </value>
                <value>
                    <fullName>2192 - Site-Specific Local Travel (28)</fullName>
                </value>
                <value>
                    <fullName>2198 - Vehicle Chargeback (21)</fullName>
                </value>
                <value>
                    <fullName>2199 - Interest Penalty (21)</fullName>
                </value>
                <value>
                    <fullName>21 - Travel Subject To Ceiling (21)</fullName>
                </value>
                <value>
                    <fullName>2200 - Transportation Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2220 - Admin Transport Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2221 - Transprt Of Things-Consult Fee (36)</fullName>
                </value>
                <value>
                    <fullName>2222 - Transport Things-Variable Fee (36)</fullName>
                </value>
                <value>
                    <fullName>2223 - Pcs Transfer Effects (36)</fullName>
                </value>
                <value>
                    <fullName>2224 - Prog. Transport Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2297 - Prog.Interest Penalty-Trans (36)</fullName>
                </value>
                <value>
                    <fullName>2299 - Admin.Interest Penalty-Trans (36)</fullName>
                </value>
                <value>
                    <fullName>2300 - Rentals, Communication, Util (36)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOC_3__c</fullName>
        <formula>RIGHT( TEXT(FOC_3a__c), LEN( TEXT(FOC_3a__c))-4)</formula>
        <label>FOC 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_3a__c</fullName>
        <label>FOC 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2100 - Travel (21)</fullName>
                </value>
                <value>
                    <fullName>2111 - Per Diem &amp; Subsistence (21)</fullName>
                </value>
                <value>
                    <fullName>2113 - Common Carrier (21)</fullName>
                </value>
                <value>
                    <fullName>2114 - Privately Owned Vehicle (21)</fullName>
                </value>
                <value>
                    <fullName>2115 - Commercial Rental (21)</fullName>
                </value>
                <value>
                    <fullName>2116 - Gsa Car Rental (21)</fullName>
                </value>
                <value>
                    <fullName>2117 - Incidental Costs (21)</fullName>
                </value>
                <value>
                    <fullName>2118 - E Travel Transaction Fee (21)</fullName>
                </value>
                <value>
                    <fullName>2121 - Site Per Diem &amp; Subs (28)</fullName>
                </value>
                <value>
                    <fullName>2123 - Site Common Carrier (28)</fullName>
                </value>
                <value>
                    <fullName>2124 - Site Pov (28)</fullName>
                </value>
                <value>
                    <fullName>2125 - Site Commercial Rental (28)</fullName>
                </value>
                <value>
                    <fullName>2126 - Site Gsa Car Rental (28)</fullName>
                </value>
                <value>
                    <fullName>2127 - Site Incidentials (28)</fullName>
                </value>
                <value>
                    <fullName>2128 - Etravel Transact Fee-Sitetrav (28)</fullName>
                </value>
                <value>
                    <fullName>2135 - Meetings / Conf Subsistence (21)</fullName>
                </value>
                <value>
                    <fullName>2191 - Local Travel (21)</fullName>
                </value>
                <value>
                    <fullName>2192 - Site-Specific Local Travel (28)</fullName>
                </value>
                <value>
                    <fullName>2198 - Vehicle Chargeback (21)</fullName>
                </value>
                <value>
                    <fullName>2199 - Interest Penalty (21)</fullName>
                </value>
                <value>
                    <fullName>21 - Travel Subject To Ceiling (21)</fullName>
                </value>
                <value>
                    <fullName>2200 - Transportation Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2220 - Admin Transport Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2221 - Transprt Of Things-Consult Fee (36)</fullName>
                </value>
                <value>
                    <fullName>2222 - Transport Things-Variable Fee (36)</fullName>
                </value>
                <value>
                    <fullName>2223 - Pcs Transfer Effects (36)</fullName>
                </value>
                <value>
                    <fullName>2224 - Prog. Transport Of Things (36)</fullName>
                </value>
                <value>
                    <fullName>2297 - Prog.Interest Penalty-Trans (36)</fullName>
                </value>
                <value>
                    <fullName>2299 - Admin.Interest Penalty-Trans (36)</fullName>
                </value>
                <value>
                    <fullName>2300 - Rentals, Communication, Util (36)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTE_Op_Plan__c</fullName>
        <label>FTE Op Plan</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <defaultValue>IF($RecordType.Name = &apos;OTAQ Op Plan&apos;, &apos;OTAQ Op Plan&apos;, 
IF($RecordType.Name = &apos;OTAQ Division Sub-Allocation&apos;, &apos;Sub-Allocation&apos;, &apos;&apos;)
)</defaultValue>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <label>Grant Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>